ingress/nginx-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx 
  labels:
    app: ingress-nginx
  name: ingress-nginx
spec:
  type: ClusterIP
  selector:
    app: ingress-nginx
  ports:
    - port: 80 
      targetPort: 80 
      name: http 
    - port: 443 
      targetPort: 443 
      name: https
